--- a/client/src/components/SubscriptionBlock.module.css
+++ b/client/src/components/SubscriptionBlock.module.css
@@ -356,3 +356,16 @@
 .optionInput[type="number"] {
   -moz-appearance: textfield;
 }
+
+.optionInputError {
+  border: 1.5px solid #FF2B54;
+  border-radius: 6px;
+  background: transparent;
+  color: #fff;
+}
+
+.button:disabled {
+  background: #222;
+  color: #888;
+  cursor: not-allowed;
+}
